fix subsections overflowing to negative left

--- a/app/ScrollableSection.themes.css
+++ b/app/ScrollableSection.themes.css
@@ -1,5 +1,6 @@
 section.anim__tracker {
   min-height: 100vh;
+  width: 100%;
   overflow: hidden;
 
   & > .anim__wrapper {
@@ -8,26 +9,18 @@ section.anim__tracker {
   }
 }
 
-section[data-theme="default"] {
-  width: 100%;
-}
-
 section[data-theme="sub-profile"] {
   /* background: blue; */
 
   height: 100vh;
-  width: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: end;
 
   & > .anim__wrapper {
     /* background: red; */
 
     min-width: 300px;
     max-width: 960px;
-    width: 100%;
+    width: 50%;
+    right: 50%;
 
     padding: 0 calc(var(--spacing-single) * 2);
 
@@ -45,7 +38,10 @@ section[data-theme="sub-profile"] {
 
 @media (orientation: portrait) {
   section[data-theme="sub-profile"] {
-    width: unset;
     justify-content: center;
+    & > .anim__wrapper {
+      width: 100%;
+      right: unset;
+    }
   }
 }
